--- a/lib/templates/default/requirements/html/namespace.erb
+++ b/lib/templates/default/requirements/html/namespace.erb
@@ -56,7 +56,7 @@
         <tr>
           <td valign='top' width="33%">
             <% @directories.each do |directory| %>
-              <% if (i += 1) % 8 == 0 %>
+              <% if (i += 1) % (@directories.size / 3).ceil == 0 %>
               </td><td valign='top' width="33%">
                 <% i = 0 %>
               <% end %>
