No Step Scenario and Formatting
+ Scenario without steps was not being detected correctly (nil instead
of empty?)
+ Scenario description was not formatted.  Added some formatting but I
think that it will be still need to be moved.

--- a/lib/templates/default/feature/html/scenario.erb
+++ b/lib/templates/default/feature/html/scenario.erb
@@ -34,7 +34,7 @@ $(function() {
 	<% end %>
 
         <div id="<%= @id %>Steps" class="steps">
-          <%= @scenario.steps ? erb(:steps) : erb(:no_steps_defined) %>
+          <%= @scenario.steps.empty? ? erb(:no_steps_defined) : erb(:steps) %>
         </div>
   
         <%= erb(:outline) if @scenario.outline? %>
