Defined/Undefined Steps
+ Link for defined and undefined steps is now a small color icon
  showing green (has a mapped definition) and orange (no definition)
+ All unmatched step definitions are now listed
+ Unlinked step definitions are no longer underlined with a red dash
  as I thought that overloaded too much information when displaying
  features and scenarios to product owners
+ Step Transforms now replace their matches correctly, there was a
  similar error that I had with replacing matches in step definitions
+ Steps, on the step transformer page, now display the keyword in a
  different color; similar to steps.

--- a/lib/templates/default/steptransformers/html/transformers.erb
+++ b/lib/templates/default/steptransformers/html/transformers.erb
@@ -34,7 +34,12 @@
 		<% if item.steps && !item.steps.empty? %>
 		<% item.steps.each_with_index do |step,step_index| %>	
 		<div class="step <%= (step_index + 1) % 2 == 0 ? 'even' : 'odd' %>">
+			<span class="predicate">
+			  <%= step.keyword %>
+			</span>
+			<span class="defined">
 			<%= link_transformed_step(step) %>
+			</span>
 			<div class="details"><a href="<%= url_for step.scenario.feature %>"><%= h(step.location) %></a></div>
 		</div>
 		<% end %>
