--- a/lib/templates/default/feature/html/steps.erb
+++ b/lib/templates/default/feature/html/steps.erb
@@ -1,25 +1,33 @@
 <% @scenario.steps.each_with_index do |step,index| %>
-  <% @step = step %>
+<% @step = step %>
 
 
-  <div <%= "id='#{@id}Step#{index}'" %> class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>">
-    <span class="predicate"><%= step.keyword %></span>
+<div <%= "id='#{@id}Step#{index}'" %> class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>">
+  <span class="predicate"><%= step.keyword %></span>
 
-    <% if step.definition %>
-      <span class="defined">
-        <%=  highlight_matches(step) %>
-        <div class="details">
-          <a href="<%= url_for step.definition %>">?</a>
-        </div>
-      </span>
-    <% else %>
-      <span class="undefined"><%= h step.value %></span>
-    <% end %>
+  <% if step.definition %>
+  <span class="defined">
+    <%=  highlight_matches(step) %>
+    <div class="details">
+      <a href="<%= url_for step.definition %>"><div class="valid">&nbsp;</div></a>
+    </div>
+  </span>
+  <% else %>
+  <span class="undefined">
+    <%= h step.value %>
+    <div class="details">
+      <a href="<%= url_for YARD::CodeObjects::Cucumber::CUCUMBER_STEPTRANSFORM_NAMESPACE %>#undefined_steps">
+        <div class="invalid">&nbsp;</div>
+      </a>  
+    </div>
+  </span>
 
-  </div>
+  <% end %>
 
-  <%= erb(:table) if step.has_table? %>
-  <%= erb(:pystring) if step.has_text? %>
+</div>
+
+<%= erb(:table) if step.has_table? %>
+<%= erb(:pystring) if step.has_text? %>
 
 
 <% end %>
