--- a/lib/templates/default/feature/html/outline.erb
+++ b/lib/templates/default/feature/html/outline.erb
@@ -1,31 +1,38 @@
 <% @scenario.scenarios.each_with_index do |scenario,example_index| %>
-  <div id="<%= "#{@id}Example#{example_index + 1}Steps" %>" style="display: none;" class="steps">
-    <% scenario.steps.each_with_index do |step,index| %>
-      <% @step = step %>
+<div id="<%= "#{@id}Example#{example_index + 1}Steps" %>" style="display: none;" class="steps">
+  <% scenario.steps.each_with_index do |step,index| %>
+  <% @step = step %>
 
 
-      <div <%= "id='#{@id}Example#{example_index + 1}Step#{index}'" %> class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>">
-        <span class="predicate"><%= step.keyword %></span>
+  <div <%= "id='#{@id}Example#{example_index + 1}Step#{index}'" %> class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>">
+    <span class="predicate"><%= step.keyword %></span>
 
-        <% if step.definition %>
-          <span class="defined">
-            <%=  highlight_matches(step) %>
-            <div class="details">
-              <a href="<%= url_for step.definition %>">?</a>
-            </div>
-          </span>
-        <% else %>
-          <span class="undefined"><%= h step.value %></span>
-        <% end %>
-
+    <% if step.definition %>
+    <span class="defined">
+      <%=  highlight_matches(step) %>
+      <div class="details">
+        <a href="<%= url_for step.definition %>"><div class="valid">&nbsp;</div></a>
       </div>
-
-      <%= erb(:table) if step.has_table? %>
-      <%= erb(:pystring) if step.has_text? %>
-
-
+    </span>
+    <% else %>
+    <span class="undefined">
+      <%= h step.value %>
+      <div class="details">
+        <a href="<%= url_for YARD::CodeObjects::Cucumber::CUCUMBER_STEPTRANSFORM_NAMESPACE %>#undefined_steps">
+          <div class="invalid">&nbsp;</div>
+        </a>  
+      </div>
+    </span>
     <% end %>
+
   </div>
+
+  <%= erb(:table) if step.has_table? %>
+  <%= erb(:pystring) if step.has_text? %>
+
+
+  <% end %>
+</div>
 <% end %>
 
 
@@ -35,17 +42,17 @@
     <thead>
       <tr>
         <% @scenario.example_headers.each_with_index do |header,header_index| %>
-          <th><%= h(header) %></th>
+        <th><%= h(header) %></th>
         <% end %>
       </tr>
     </thead>
     <% @scenario.example_data.each_with_index do |row,row_index| %>
-      <tr class="<%= (row_index + 1) % 2 == 0 ? 'even' : 'odd' %>"
-          onclick="<%= "toggleScenarioExample('#{@id}',#{row_index + 1});" %>">
-            <% row.each_with_index do |column,column_index| %>
-          <td><%= h(column.to_s.strip) %></td>
-        <% end %>
-      </tr>
+    <tr class="<%= (row_index + 1) % 2 == 0 ? 'even' : 'odd' %>"
+      onclick="<%= "toggleScenarioExample('#{@id}',#{row_index + 1});" %>">
+      <% row.each_with_index do |column,column_index| %>
+      <td><%= h(column.to_s.strip) %></td>
+      <% end %>
+    </tr>
     <% end %>
   </table>
 </div>
