--- a/lib/templates/default/fulldoc/html/full_list_features.erb
+++ b/lib/templates/default/fulldoc/html/full_list_features.erb
@@ -1,20 +1,23 @@
-<li>
+<% n = 1 %>
+<li class="r<%= n %>">
   <%= linkify YARD::CodeObjects::Cucumber::CUCUMBER_NAMESPACE, "All Features" %>
 </li>
+<% n = n == 2 ? 1 : 2 %>
 <% @items.each do |feature| %>
-<li>
+<li class="r<%= n %>">
 	<%= "<a class='toggle'></a>" unless feature.scenarios.empty? %>
 	<%= linkify feature, feature.value %>
 	<small><%= feature.location %></small>
 </li>
-
+<% n = n == 2 ? 1 : 2 %>
 <% if feature.scenarios %>
 <ul>
 	<% feature.scenarios.each do |scenario| %>
-	<li>
+	<li class="r<%= n %>">
 		<%= linkify feature, scenario.value %>
 		<small><%= scenario.location %></small>
 	</li>
+        <% n = n == 2 ? 1 : 2 %>
 	<% end %>
 </ul>
 <% end %>
