Tag 'OR' filtering
 + Updated the tag filtering page to now support AND and OR filtering
   of tags, similar to how you would declare it on the command-line.

   As you type tags, that exist, it will continue to add them to a
   simulated command-line and show you which features and scenarios
   will be executed.

--- a/lib/templates/default/featuretags/html/namespace.erb
+++ b/lib/templates/default/featuretags/html/namespace.erb
@@ -4,10 +4,11 @@
       var tag_list = [ <%= tags.collect{|t| "'#{t.value}'" }.join(',') %> ];
 
       $(function() {
-        $("#tag_search").keyup(function(event) {
-          var tags = determine_tags_used_in_formula($("#tag_search")[0].value);
-          display_example_command_line(tags);
-          display_qualifying_features_and_scenarios(tags);
+        $("#tag_search").keyup(function(evt) {
+          var formulaTags = determineTagsUsedInFormula($("#tag_search")[0].value);
+          displayExampleCommandLine(formulaTags);
+          displayQualifyingFeaturesAndScenarios(formulaTags);
+          return evt;
         });
       });
     </script>
