--- a/lib/templates/default/fulldoc/html/css/common.css
+++ b/lib/templates/default/fulldoc/html/css/common.css
@@ -91,7 +91,6 @@
     border: 1px solid #DEDEDE;
 }
 
-
 .outline {
     margin-top: 20px;
     margin-left: 40px;
@@ -139,15 +138,17 @@
 }
 #tags * li { padding: 5px; padding-left: 12px; margin: 0 0 0 10px; font-size: 1.1em; list-style: none; }
 
-.tag_search { margin-left: 40px; }
-#tag_search {  margin-left: 40px; width: 500px; height: 20px; }
-#command_example { 
-    margin: 10px 0px 0px 40px;
+#tag_search {  margin: 10px 0px 10px 0px; width: 100%; min-width: 200px; height: 20px; }
+#tag_filtering {
+    margin: 10px 20px 0px 40px;
+    font-weight: bold;
     padding: 20px;
     background-color: #F8F8FF;
     color: #444444;
     border: 1px solid #DEDEDE;
 }
+#command_example { margin-top: 10px; margin-left: 10px; font-weight: normal; }
+
 
 
 #cukes_links { margin: 10px auto 10px auto; 
